# mini-proj2

./: docker-compose.prod.yml  docker-compose.yml  readme.md  startup.sh
.kubernetes/: soap-nodeport.svc.yml  soap.deployment.yml  soap.pod.yml
.kubernetes/deployments/: bus.deploy.yml  gateway.deploy.yml  grpc.deploy.yml  rest.deploy.yml  soap.deploy.yml
.kubernetes/jobs/: grpc-migration.job.yml  rest-migration.job.yml  soap-migration.job.yml
.kubernetes/services/: bus-nodeport.svc.yml  gateway-nodeport.svc.yml  grpc-nodeport.svc.yml  rest-nodeport.svc.yml  soap-nodeport.svc.yml
bus/: Cargo.toml  build.rs  config.toml  dockerfile
bus/proto/: person.proto  person.protols
bus/src/: main.rs
bus/src/clients/grpc/: mod.rs  person_client.rs
bus/src/clients/rest/: exam_client.rs  grade_client.rs  mod.rs
bus/src/entities/: exam.rs  grade.rs  link.rs  mod.rs  person.rs
bus/src/logic/: exam_handlers.rs  grade_handlers.rs  grpc_rest_handlers.rs  hybrid_handlers.rs  mod.rs  person_handlers.rs
bus/src/routes/: exam_routes.rs  grade_routes.rs  hybrid_routes.rs  mod.rs  person_routes.rs
bus/src/routes/api/: exam_api.rs  grade_api.rs  hybrid_api.rs  mod.rs  person_api.rs
bus/src/utils/: config.rs
gateway/: config.toml  dockerfile  make_grpc.sh  pyproject.toml  requirements.txt
gateway/proto/: person.proto
gateway/src/: main.py
grpc/: .env  Cargo.toml  config.toml
grpc/migration/: Dockerfile  config.toml
grpc/migrations/: 20211011103214_person.down.sql  (+1 more)
rest/: .gitignore  Dockerfile  config.toml  deps.ts  readme.md
soap/: .gitignore
(+100 files in other folders)
