[package]
name = "bus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"


[dependencies]
# Primary
warp="0.3.1"
tokio = { version="1.11.0", features = ["macros", "rt-multi-thread"] }
tonic="0.5.2"
hyper="0.14.13"


# Utils
toml="0.5.8"

# Serde
serde="1.0.130"
serde_json="1.0.68"
serde_derive="1.0.130"

[build-dependencies]
tonic-build = "0.5.2"
