[package]
name = "bus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"


[dependencies]
# Primary
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.5.2"
reqwest = "0.11.5"
prost = "0.8.0"


# Utils
toml = "0.5.8"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }

# Serde
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"

[build-dependencies]
tonic-build = "0.5.2"
